tests/core/data/csl/InterfaceTests/InvalidDeclarations/missingReturnTypeAndMethodNameClash.csl
// Method declaration has no returning type 
interface missingReturnTypeAndMethodNameClash
{
	NotAnExceptionType(in string fooMe);

};


